# FunnyScholarlyCensorware

./: .replit  main.py  puthon.xlsx  pyproject.toml  requirements.txt
