[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = []

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = "*"
openpyxl = "*"
pandas = "*"
streamlit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
